kubernetes/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gotoschool
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #certmanager.k8s.io/issuer: "letsencrypt-staging"
    #certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: gotoschool.com
    http:
      paths:
      - path: /graphql
        backend:
          serviceName: graphql
          servicePort: 3000
      - path: /session
        backend:
          serviceName: session
          servicePort: 3001
